# git-reading

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INCREMENTAL_LOAD_FIX.md  Makefile  README.md  docker-compose.yml  migrate_logging.py  pyproject.toml
.github/workflows/: README.md  ci.yml
archive/repo_reader/: __init__.py  app.py  cli.py  git_tools.py
archive/repo_reader/tests/: test_qa.py
docs/: API_USAGE.md  ARCHITECTURE.md  CI_SETUP.md  COVERAGE.md  DATABASE.md  DATABASE_MIGRATION.md  ENRICHMENT_GUIDE.md  ENRICHMENT_ROADMAP.md  FILTERING_COMPARISON.md  INCREMENTAL_EXTRACTION_PLAN.md  KNOWN_ISSUES.md  LOGGING.md  MIGRATION_SYSTEM.md  PRE_FILTERING_UPGRADE.md  PROJECT_PHASES.md  SEMANTIC_SEARCH.md
docs/work/: KNOWN_ISSUES.md  PHASE_3_ANALYTICS.md  PROJECT_PHASES.md  README.md  WIKIDATA_INTEGRATION.md
examples/: search_example.py
migrations/: 000_add_phase2_columns.sql  001_add_book_movements.sql  002_add_awards.sql  003_add_author_influences.sql
repo_reader/: models.py  qa.py  scanner.py
src/: index_readings.py
src/api/: README.md  __init__.py  main.py  schema.py  types.py
src/api/resolvers/: __init__.py  graph.py
src/common/: __init__.py  constants.py  env.py  logger.py
src/enrich/: __init__.py  cli.py  orchestrator.py  source_tracker.py
src/enrich/clients/: base.py  openlibrary.py  rate_limiter.py  wikidata.py  wikidata_label_resolver.py
src/enrich/normalizers/: base.py  book_normalizer.py  wikidata_normalizer.py
src/extract/: __init__.py  change_detection.py  cli.py  extraction_io.py  file_utils.py  git_utils.py  item_extraction.py  item_id.py  main.py  models.py  replay.py
src/load/: __init__.py  cli.py  db_schema.py  db_utils.py  load_data.py  migrate_to_db.py
src/load/db/: __init__.py  factory.py  interface.py  postgres_adapter.py  schema_postgresql.sql  schema_sqlite.sql  sqlite_adapter.py  types.py
src/load/db/migrations/: __init__.py  runner.py
src/load/db/migrations/versions/: 001_baseline_schema.sql  002_add_date_read.sql  003_add_phase2_enrichment.sql
src/normalize_source/: __init__.py  cli.py  constants.py  fixer.py  interactive_fixer.py  main.py  models.py  reporters.py  validator.py
src/normalize_source/patterns/: __init__.py  learner.py  pattern_store.py  pattern_validator.py
src/normalize_source/rules/: __init__.py  citation_rules.py  content_rules.py  header_rules.py  list_rules.py  section_rules.py
src/query/: __init__.py  cli.py  embeddings.py  search.py  vector_store.py  vector_store_db.py
src/transform/: __init__.py
streamlit_app/: README.md  __init__.py  app.py
streamlit_app/.streamlit/: config.toml
streamlit_app/pages/: 1_📊_Analytics_Overview.py  2_🔍_Semantic_Search.py  3_🗄️_Database_Explorer.py  4_🕸️_Author_Network.py  5_📚_Thematic_Analysis.py  6_📈_Reading_Stats.py
tests/: test_integration.py
tests/common/: test_env.py  test_logger.py
tests/enrich/: __init__.py  test_author_influences.py  test_normalizer_qid_resolution.py  test_wikidata_label_resolver.py  test_wikidata_normalizer.py
tests/extract/: test_author_parsing.py  test_empty_validation.py  test_incremental_extraction.py  test_integration.py  test_nested_lists.py
tests/load/: __init__.py  test_db_adapters.py  test_db_utils.py  test_incremental_title_change.py  test_load_data.py  test_migrate_to_db.py  test_migrations.py
tests/normalize_source/: __init__.py  test_citation_rules.py  test_content_rules.py  test_fixer.py  test_header_rules.py  test_json_filter.py  test_list_rules.py  test_output_file.py  test_section_rules.py
tests/query/: __init__.py  test_incremental_search_update.py
