[project]
name = "git-reading"
version = "0.1.0"
description = "Index reading notes from markdown files using git history"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
dev = [
    "ruff>=0.1.0",
]

[project.scripts]
extract-readings = "extract.main:main"
normalize = "normalize_source.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/extract",
    "src/enrich",
    "src/load",
    "src/normalize_source",
    "src/query",
    "src/transform",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["extract", "enrich", "load", "normalize_source", "query", "transform"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "F401", "F811"]
